test/errors/type/math/clamp.yasl
math.clamp(2, 1, .s)
